Revert "Prevent sign edit event cancelling other mods"
This reverts commit 57b46a32f9519b171013f314a2694c7a22007ac6.

Pablo rewrote EventSignEdit handling to drop ci.cancel(), the screen-reopen
path, and the only-replace-text-if-changed guard, changing the observable
EventSignEdit semantics. Restore canonical behavior: cancel the vanilla sign
screen, reopen JsMacros' own AbstractSignEditScreen (Hanging/regular) with the
event's lines and fixed selection, and send the sign update + cancel when the
event closes/cancels.

Conflict was due to the later yarn->mojmap remap (file renamed
MixinClientPlayerEntity -> MixinLocalPlayer); resolved by reapplying canonical
logic with mojmap names (Minecraft#setScreen, isTextFilteringEnabled,
SignText#setMessage, ServerboundSignUpdatePacket, screens.inventory.* sign
screens).